<resources>
    <string name="chooseMedia">Choose Media</string>
    <string name="takeVideo">Take Video</string>
    <string name="noCameraOnDevice">No Camera</string>
    <string name="notificationTitle">Uploading to Canvas</string>
    <string name="preparingUpload">Preparing upload</string>
    <string name="loadingFilesIndeterminate">Loading Files&#8230;</string>
    <string name="fileUploadSuccess">Upload Successful</string>
    <string name="noNetwork">Network not available - please try again later.</string>
    <string name="uploadMessage">"Upload in progress. Check notifications for upload status.</string>
    <string name="mediaUpload">Media Upload</string>
    <string name="uploadingFile">Uploading file&#8230;</string>
    <string name="errorUploadingFile">An error occurred uploading your file. Please try again.</string>
    <string name="fileSubmission">Submit File(s)</string>
    <string name="uploadFiles">Upload File(s)</string>
    <string name="upload">Upload</string>
    <string name="errorSendingMessage">An error occurred sending your message. Please try again.</string>
    <string name="notificationChannelNameFileUploadsName">File Upload Notifications</string>
    <string name="notificationChannelNameFileUploadsDescription">Canvas notifications for ongoing file uploads.</string>
    <string name="chooseFileSource">Choose File From&#8230;</string>
    <string name="addFile">Add File</string>
    <string name="choose_a_file">Choose a File</string>
    <string name="fromCamera">Camera</string>
    <string name="fromGallery">Gallery</string>
    <string name="fromDevice">Device</string>
    <string name="fromOtherApplication">Other</string>
    <string name="Domain">Domain</string>
    <string name="files">Files</string>
    <string name="file">File</string>
    <string name="addItem">Add Item</string>
    <string name="assignment">Assignment</string>
    <string name="attachedFiles">Attached Files</string>
    <string name="turnIn">Turn in</string>
    <string name="course">Course</string>
    <string name="sending">Sending&#8230;</string>
    <string name="star1">Star Rating One</string>
    <string name="star2">Star Rating Two</string>
    <string name="star3">Star Rating Three</string>
    <string name="star4">Star Rating Four</string>
    <string name="star5">Star Rating Five</string>
    <string name="fileQuotaExceeded">You have currently exceeded your file storage quota.</string>
    <string name="errorSubmittingFiles">An error occurred turning in your files. Please try again.</string>
    <string name="errorLoadingFiles">An error occurred loading your file. Please check your internet connection and try again.</string>
    <string name="filesUploadedSuccessfully">Files uploaded successfully.</string>
    <string name="filesSubmittedSuccessfully">Files submitted successfully.</string>
    <string name="messageSentSuccessfully">Message sent successfully.</string>
    <string name="shareWithCanvas">Other apps can share files with Canvas! Look for the icon below in apps and tap on Canvas.</string>
    <string name="shareWithCanvas2">That will open this app. Then just select which course and assignment that you want to turn in the file to.</string>
    <string name="contentDescriptionSocialShare">Share icon</string>
    <string name="submitAssignment">Submit Assignment</string>
    <string name="assignmentHeader">Assignment :</string>
    <string name="submittingAssignment">Submitting assignment&#8230;</string>
    <string name="conversations">Conversations </string>
    <string name="inbox">Inbox </string>
    <string name="divider">Divider</string>
    <string name="legal">Legal</string>
    <string name="completeHomework">COMPLETE your Homework</string>
    <string name="takeExam">Take an Exam</string>
    <string name="fileIcon">File Icon</string>
    <string name="uploadingFileNum" formatted="false">Uploading %d of %d</string>
    <string name="fileLocked" formatted="false">%s has been locked.</string>
    <string name="filePermissionGranted">File is now ready to download, please try again.</string>
    <string name="filePermissionDenied">The file cannot be downloaded without granting permission.</string>
    <string name="pleaseTryAgain">Permission Granted, please try again.</string>
    <string name="pickVideo">Select a Video</string>
    <string name="errorOccurred">An unexpected error occurred.</string>
    <string name="serverError">A server error has occurred.</string>
    <string name="unauthorized">You are unauthorized to access this. Either you don\'t have permissions or you don\'t have access yet (like your course hasn\'t started yet)</string>
    <string name="fileNoLongerExists">That file no longer exists.</string>
    <string name="invalidAccessToken">Your session has expired. Please login to start a new session.</string>
    <string name="uploadingFromSourceFailed">Uploading a file from this source could not be completed.</string>
    <string name="errorGettingPhoto">There was an error getting the photo. Please try again.</string>
    <string name="errorTextMissing">Add some text to send a message</string>
    <string name="fileUploadNotSupported">You can\'t upload files to the selected assignment.</string>
    <string name="noCourseSelected">Please select a course</string>
    <string name="selectCourse">Select a course</string>
    <string name="selectAssignment">Select an assignment</string>
    <string name="loadingAssignments">Loading Assignments…</string>
    <string name="noAssignmentSelected">Please select an assignment</string>
    <string name="noAssignmentsWithFileUpload">This course has no assignments that allow file uploads.</string>
    <string name="teacherNotAllowedFileSubmission">As a teacher in this course, you can\'t submit files</string>
    <string name="noFilesUploaded">You haven\'t selected any files.</string>
    <string name="oneOrMoreExtensionNotAllowed">One or more files has a file extension that isn\'t allowed</string>
    <string name="extensionNotAllowed">The selected file type is not allowed.</string>
    <string name="allowedExtensions">Allowed extensions:&#160;</string>
    <string name="noDataConnection"> Please check your data connection and try again. </string>
    <string name="noApps">Your device doesn\'t have any applications installed that can handle this file.</string>
    <string name="noAppsShort">Cannot open</string>
    <string name="unexpectedErrorOpeningFile">An unexpected error occurred while trying to open the file.</string>
    <string name="unexpectedErrorDownloadingFile">An unexpected error occurred while trying to download the file.</string>
    <string name="done">Done</string>
    <string name="permissionDenied">To use this feature, permission must first be granted.</string>
    <string name="noConnection">No Connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inbox_all">Inbox</string>
    <string name="inbox_unread">Unread</string>
    <string name="inbox_starred">Starred</string>
    <string name="inbox_sent">Sent</string>
    <string name="inbox_archived">Archived</string>
    <string name="forbidden">Replies are only visible to those who have posted at least one reply.</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="lockedAssignmentNotModule">This assignment is locked.</string>
    <string name="deletedEntryNoChildren">This deleted discussion entry has no replies.</string>
    <string name="deleted">[Deleted]</string>
    <string name="deleted_by">[Deleted by %1$s]</string>
    <string name="lockedDiscussionDesc">This discussion is part of the module %s and has not been unlocked yet.</string>
    <string name="gradedDiscussion">Graded Discussion</string>
    <string name="pointsPossible">Points Possible</string>
    <string name="sideCommentEntry">In this type of discussion, you cannot comment on any entry on this level.</string>
    <string name="accessibility_overflow">Overflow</string>
    <string name="discussion_response">Comment</string>
    <string name="discussion_responses">Comments</string>
    <string name="discussion_unread">Unread</string>
    <string name="discussion_reply">Reply</string>
    <string name="close">Close</string>
    <string name="noInternetConnectionTitle">No Internet Connection</string>
    <string name="noInternetConnectionMessage">This action requires an internet connection.</string>
    <string name="content_description_avatar">Avatar</string>
    <string name="formattedAvatarAction">View user details for %s.</string>
    <string name="utils_canvas">Canvas</string>
    <string name="utils_canvasTeacher">Canvas Teacher</string>
    <string name="utils_canvasParent">Canvas Parent</string>
    <string name="utils_polls">Canvas Polls</string>
    <string name="utils_speedgrader">Speedgrader</string>
    <string name="utils_howAreWeDoing">How are we doing?</string>
    <string name="utils_rateUs">How would you rate us?</string>
    <string name="utils_doBetter">What can we do better?</string>
    <string name="utils_sendFeedback">Send Feedback</string>
    <string name="utils_suggestions">Suggestions for Android</string>
    <string name="utils_domain">Domain</string>
    <string name="utils_versionNum">Version:</string>
    <string name="utils_userId">User ID</string>
    <string name="utils_email">Email</string>
    <string name="utils_dontShowAgain">Don\'t show again</string>
    <string name="utils_installDate">Install Date:</string>
    <string name="utils_device">Device</string>
    <string name="utils_osVersion">OS Version</string>
    <string name="loading">Loading</string>
    <string name="save">Save</string>
    <string name="cropInstructions">Pinch and drag to adjust the image.</string>
    <plurals name="utils_discussionsReplies">
        <item quantity="one">%s Reply</item>
        <item quantity="other">%s Replies</item>
    </plurals>
    <string name="utils_discussionsDeleted" formatted="false">Deleted this reply %s</string>
    <string name="utils_discussionsUnknownAuthor">Unknown Author</string>
    <string name="utils_discussionsReply">Reply</string>
    <string name="utils_discussionsEdit">Edit</string>
    <string name="utils_discussionsDeleteWarning">Are you sure you want to delete this reply?</string>
    <string name="utils_availableToLabel">Available to:</string>
    <string name="utils_availableFromLabel">Available from:</string>
    <string name="utils_dueDateHeaderLabel">Due</string>
    <string name="utils_dueLabel">Due:</string>
    <string name="utils_delete">Delete</string>
    <string name="utils_dueDateAtTime" formatted="false">Due %1s at %2s</string>
    <string name="utils_noDateFiller">--</string>
    <string name="utils_availabilityLabel">Availability:</string>
    <string name="utils_pinnedIcon">Icon for pinned discussion</string>
    <string name="utils_pinDiscussion">Pin Discussion</string>
    <string name="utils_unpinDiscussion">Unpin Discussion</string>
    <string name="utils_discussionPinned">Discussion Pinned</string>
    <string name="utils_pinnedDiscussions">Pinned</string>
    <string name="utils_discussionUnpinned">Discussions</string>
    <string name="utils_emptyDiscussions">There are no discussions to show in this section.</string>
    <string name="utils_description">Description</string>
    <string name="utils_allowThreadedReplies">Allow threaded replies</string>
    <string name="utils_usersMustPost">Students must post before seeing replies</string>
    <string name="utils_discussionsClosed">Closed for Comments</string>
    <string name="utils_discussionsOpen">Open for Comments</string>
    <string name="utils_discussionsPin">Pin</string>
    <string name="utils_discussionsUnpin">Unpin</string>
    <string name="utils_discussionsOptions">Options</string>
    <string name="utils_discussionsDeleteTitle">Delete Discussion?</string>
</resources>