<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/allowedExtensions"
            style="@style/TextFont.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/allowedExtensions"
            android:textColor="@color/utils_defaultTextDark"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:layout_height="130dp"/>

        <!-- Ideally these would be buttons instead of nested LinearLayouts, but as of Support Library v23.3
            support vector drawables in XML only work with the app:srcCompat attribute in ImageViews -->
        <LinearLayout
            android:id="@+id/addButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/fromCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/fromCamera"
                    android:tint="@color/utils_defaultTextDark"
                    app:srcCompat="@drawable/vd_utils_camera" />

                <TextView
                    style="@style/TextFont.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromCamera"
                    android:textColor="@color/utils_defaultTextDark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fromGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/fromGallery"
                    android:tint="@color/utils_defaultTextDark"
                    app:srcCompat="@drawable/vd_utils_image" />

                <TextView
                    style="@style/TextFont.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromGallery"
                    android:textColor="@color/utils_defaultTextDark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fromDevice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/fromDevice"
                    android:tint="@color/utils_defaultTextDark"
                    app:srcCompat="@drawable/vd_utils_document" />

                <TextView
                    style="@style/TextFont.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromDevice"
                    android:textColor="@color/utils_defaultTextDark" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fileLoadingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:layout_gravity="center"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/fileLoadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fileLoadingProgressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/loadingFilesIndeterminate" />

    </RelativeLayout>

</FrameLayout>

